--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 NEXT_PUBLIC_API_BASE_URL=https://api.jikan.moe/v4
+
+GITHUB_ID=Ov23liGNhkLYoAAxH39p
+GITHUB_SECRET=0cf8a8eb2663475e7e4e201ed2dbeb029f9fbece
+
+NEXTAUTH_SECRET=rahasia123
