update keyword postinstall

--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ NEXTAUTH_SECRET=rahasia123
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:@localhost:3306/cuyanimelist"
+
+trAjwG#-Uae57zV
+trAjwG#-Uae57zV
